--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -8,7 +8,10 @@
 
 </head>
 <body>
-    <div id="app"></div>
+     <div id="app"><%- html %></div>
+     <script>
+      window.__INITIAL_STATE__ = <%- initialState %>;
+    </script>
     <script src="/main.bundle.js" async></script>
 </body>
 </html>
